<?xml version="1.0"?>
<package>
  <name>jaco_gazebo</name>
  <version>0.0.0</version>
  <description>The jaco_gazebo package</description>

  <author email="alex@todo.todo">Alex Henning</author>
  <maintainer email="alex@todo.todo">Alex Henning</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/jaco_gazebo</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/wpi_jaco/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/wpi_jaco</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
