<?xml version="1.0"?>
<package>
  <name>jaco_sdk</name>
  <version>0.0.0</version>
  <description>JACO Software SDK and API</description>

  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>

  <url type="website">http://ros.org/wiki/jaco_ros</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/jaco_ros/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/jaco_ros</url>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
