<?xml version="1.0"?>
<package>
  <name>jaco_teleop</name>
  <version>0.0.1</version>
  <description>Various Nodes for Teleoperating the JACO Arm</description>

  <author email="davidkent@wpi.edu">David Kent</author>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>


  <url type="website">http://ros.org/wiki/jaco_teleop</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/jaco_teleop/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/jaco_teleop</url>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>jaco_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>interactive_markers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>jaco_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
