<?xml version="1.0"?>
<package>
  <name>wpi_jaco_wrapper</name>
  <version>0.0.8</version>
  <description>ROS Wrapper for the JACO Arm Developed at WPI</description>

  <author email="davidkent@wpi.edu">David Kent</author>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/wpi_jaco_wrapper</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/wpi_jaco/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/wpi_jaco</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>controller_manager</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>wpi_jaco_msgs</build_depend>
  <build_depend>jaco_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>controller_manager</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>ecl_geometry</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>wpi_jaco_msgs</run_depend>
  <run_depend>jaco_sdk</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
